[tool.poetry]
name = "disappointments-bot"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.20"
environs = "^9.5.0"
peewee = "^3.14.10"
psycopg2-binary = "^2.9.3"
APScheduler = "^3.9.1"
XlsxWriter = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
